# ti4-tg-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  environment.yml  pyproject.toml  ti4_bot.py
data/font/: Readme.md
data/layouts/: standard_5.yaml  standard_6.yaml  standard_hex.yaml  testing_1.yaml  testing_2.yaml
src/ti4_tg_bot/: main.py
src/ti4_tg_bot/bot/: lobby_logic.py  logic.py  t1.py  t2.py
src/ti4_tg_bot/data/: __init__.py  base_game.yaml  map.py  models.py
src/ti4_tg_bot/data/layouts/: standard_hex.yaml
src/ti4_tg_bot/map/: __init__.py  annots.py  gen_helper.py  hexes.py  images.py  milty.py  ti4_layout.py  ti4_map.py
src/ti4_tg_bot/mapgen/: ___init__.py  derekpeterson.py  local.py
src/ti4_tg_bot/state/: room.py
