[build-system]
requires = [
    "setuptools >= 61.0.0",
    "setuptools-scm[toml]>=6.2",
    "importlib_metadata>=4.2.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ti4_tg_bot"
description = "Twilight Imperium: 4th Edition, bot for Telegram."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
keywords = ["twilight-imperium", "telegram"]
license = { file = "LICENSE" }
authors = [{ name = "NowanIlfideme", email = "git@nowan.dev" }]

dependencies = [
    "aiogram",
    "pydantic<2",
    "pydantic-yaml~=1.0.0a1",
    "importlib_metadata",
    "typing_extensions>=4.5.0",
]
urls = { github = "https://github.com/NowanIlfideme/pydantic-yaml", docs = "https://pydantic-yaml.readthedocs.io/en/latest/" }

[project.optional-dependencies]
dev = [
    "setuptools>=61.0.0",
    "setuptools-scm[toml]>=6.2",
    "pre-commit==2.21.0",
    "ruff==0.0.270",
    "black==23.3.0",
    "mypy==1.3.0",
    "pytest==7.3.1",
]

[project.scripts]
ti4tg = "ti4_tg_bot.main:main"

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }
packages = ["ti4_tg_bot"]

[tool.setuptools.package-data]

[tool.setuptools.dynamic]
version = { attr = "ti4_tg_bot.version.__version__" }
